2009-06-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#121351 task switcher maximises applications instead of just panning

	Take UX Guidelines seriously.
	Also implrement correct (to specs) panning and dismissal areas.

	* src/tidy/tidy-finger-scroll.c:
	  Make the capture callback a class signal handler in order
	  to be overridable somehow.
	* src/home/hd-scrollable-group.c (hd_scrollable_group_is_clicked):
	  Allow max. 15 pixels of drift and also consider the time.
	* src/home/hd-task-navigator.c

2009-06-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/main.c: Remove old keyboard shortcuts and add ctrl+backspace
	and shift+ctrl+n shortcuts. These require a recent libmatchbox2 to
	work.

2009-06-16  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#117748 - Transition while switching to and from portrait mode
	                   is not proper (dial pad)
	* src/util/hd-transition.c
	* src/util/hd-transition.h: Added hd_transition_rotate_ignore_damage,
	  which returns whether or not the compositor should ignore damage
	  events (because the screen is blanked). Use calls to this to
	  prolong the time we spend in the blanking state.
	* src/mb/hd-comp-mgr.c: consult hd_transition_rotate_ignore_damage
	  before we queue a redraw for the screen.
	* data/transitions.ini: removed duration_blanking item as it is no
	  longer required

2009-06-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added missing D-Bus signal matches for lock and screen status.
	For: NB#122221

	* src/launcher/hd-app-mgr.c:

2009-06-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.54

2009-06-15  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Avoid resizing the textures used for
	  blurring and instead rotate the image by 90 degrees if the aspect
	  ratio is wrong. This saves us vital time in the middle of a rotate
	  transition. Done to help with NB#117748.
